<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BitGym</string>
    <string name="empty_string"></string>
    <string name="action_settings">Settings</string>
    <string name="logout_success">Logout success</string>
    <string name="separator">separator</string>
    <string name="login">Login</string>
    <string name="btn_select_workout">SELECT WORKOUT</string>
    <string name="btn_quick_start">QUICK START</string>
    
    <string name="btn_instructor">INSTRUCTOR</string>
    <string name="btn_personal_training">PERSONAL TRAINING</string>
    
    <string name="left_menu_home_menu">MENU</string>
    <string name="left_menu_login_menu">LOGIN</string>
    <string name="left_menu_logout_menu">LOGOUT</string>
    <string name="left_menu_account_menu">ACCOUNT</string>
    <string name="left_menu_instructor_menu">INSTRUCTOR MODE</string>
    <string name="left_menu_connect_menu">CONNECT BIKE</string>
    <string name="left_menu_workout_story_menu">WORKOUT HISTORY</string>
    <string name="left_menu_app_demo_menu">APP DEMO</string>
    <string name="left_menu_setting_menu">SETTINGS</string>

</resources>
